--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^9.1.1",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@mat-datetimepicker/core": "^4.0.1",
+    "@mat-datetimepicker/moment": "^4.0.1",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
