--- a/src/Server/CouplePlanner.Presentation/CouplePlanner.Presentation.csproj
+++ b/src/Server/CouplePlanner.Presentation/CouplePlanner.Presentation.csproj
@@ -11,20 +11,21 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\$(Configuration)\CouplePlanner.Presentation.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
     <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="3.0.0" />
-    <PackageReference Include="Microsoft.OpenApi" Version="1.1.4" />
-    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
-    <PackageReference Include="NJsonSchema" Version="10.1.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CouplePlanner.Application\CouplePlanner.Application.csproj" />
+    <ProjectReference Include="..\CouplePlanner.Domain\CouplePlanner.Domain.csproj" />
+    <ProjectReference Include="..\CouplePlanner.Infrastructure\CouplePlanner.Infrastructure.csproj" />
     <ProjectReference Include="..\OpenApi2JsonSchema\OpenApi2JsonSchema.csproj" />
   </ItemGroup>
 
