--- a/src/Client/angular.json
+++ b/src/Client/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../Server/CouplePlanner.WebAPI/wwwroot",
+            "outputPath": "../Server/CouplePlanner.Presentation/wwwroot",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
