--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.0.5",
     "@mat-datetimepicker/core": "^4.0.1",
     "@mat-datetimepicker/moment": "^4.0.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "rxjs": "~6.5.4",
