--- a/src/Server/CouplePlanner.Presentation/CouplePlanner.Presentation.csproj
+++ b/src/Server/CouplePlanner.Presentation/CouplePlanner.Presentation.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
     <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="OpenAPI2JsonSchema" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.1.0" />
   </ItemGroup>
@@ -26,7 +27,6 @@
     <ProjectReference Include="..\CouplePlanner.Application\CouplePlanner.Application.csproj" />
     <ProjectReference Include="..\CouplePlanner.Domain\CouplePlanner.Domain.csproj" />
     <ProjectReference Include="..\CouplePlanner.Infrastructure\CouplePlanner.Infrastructure.csproj" />
-    <ProjectReference Include="..\OpenApi2JsonSchema\OpenApi2JsonSchema.csproj" />
   </ItemGroup>
 
 
